[gd_scene load_steps=7 format=2]

[ext_resource path="res://Bullet/BulletNormal.gd" type="Script" id=1]
[ext_resource path="res://Bullet/bullets.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 3.5, 3 )

[sub_resource type="Animation" id=14]
resource_name = "Bullet"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 3, 4, 3, 4 ]
}

[sub_resource type="Animation" id=10]
resource_name = "Collision"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 5, 0, 1 ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:shape")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ SubResource( 11 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 9.5, -0.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}

[node name="Bullet" type="Area2D" groups=["bullet"]]
script = ExtResource( 1 )
SPEED = 300

[node name="Sprite" type="Sprite" parent="."]
rotation = 3.14159
texture = ExtResource( 2 )
hframes = 3
vframes = 2

[node name="Position2D" type="Position2D" parent="Sprite"]
position = Vector2( 10, -0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 9.5, -0.5 )
shape = SubResource( 11 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Bullet"
anims/Bullet = SubResource( 14 )
anims/Collision = SubResource( 10 )
anims/RESET = SubResource( 9 )

[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
